@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v22.2.7-cur, done by cs@nop.
--;-;-;2022-02-07 02:12:47, took 00:07:00, with 100 workers, on 2656 cases, 0 failed, 0 traces, 6 retries
+-;-;-;2022-02-07 02:36:58, took 00:07:18, with 100 workers, on 2664 cases, 0 failed, 0 traces, 3 retries
 -;-;-;./rtr.bin
 http://sources.nop.hu/cfg/basic.tst;basic.tst;success;dummy test
 http://sources.nop.hu/cfg/conn-amt01.tst;conn-amt01.tst;success;amt over ipv4
@@ -2228,6 +2228,14 @@ http://sources.nop.hu/cfg/rout-bgp531.tst;rout-bgp531.tst;success;bgp routemap f
 http://sources.nop.hu/cfg/rout-bgp532.tst;rout-bgp532.tst;success;bgp routepolicy filtering with nexthop
 http://sources.nop.hu/cfg/rout-bgp533.tst;rout-bgp533.tst;success;bgp routemap filtering with nexthop with soft-reconfig
 http://sources.nop.hu/cfg/rout-bgp534.tst;rout-bgp534.tst;success;bgp routepolicy filtering with nexthop with soft-reconfig
+http://sources.nop.hu/cfg/rout-bgp535.tst;rout-bgp535.tst;success;bgp routemap filtering with asend
+http://sources.nop.hu/cfg/rout-bgp536.tst;rout-bgp536.tst;success;bgp routemap filtering with asend with soft-reconfig
+http://sources.nop.hu/cfg/rout-bgp537.tst;rout-bgp537.tst;success;bgp routepolicy filtering with asend
+http://sources.nop.hu/cfg/rout-bgp538.tst;rout-bgp538.tst;success;bgp routepolicy filtering with asend with soft-reconfig
+http://sources.nop.hu/cfg/rout-bgp539.tst;rout-bgp539.tst;success;bgp routemap filtering with asmid
+http://sources.nop.hu/cfg/rout-bgp540.tst;rout-bgp540.tst;success;bgp routemap filtering with asmid with soft-reconfig
+http://sources.nop.hu/cfg/rout-bgp541.tst;rout-bgp541.tst;success;bgp routepolicy filtering with asmid
+http://sources.nop.hu/cfg/rout-bgp542.tst;rout-bgp542.tst;success;bgp routepolicy filtering with asmid with soft-reconfig
 http://sources.nop.hu/cfg/rout-eigrp01.tst;rout-eigrp01.tst;success;eigrp point2point connection
 http://sources.nop.hu/cfg/rout-eigrp02.tst;rout-eigrp02.tst;success;eigrp point2multipoint connection
 http://sources.nop.hu/cfg/rout-eigrp03.tst;rout-eigrp03.tst;success;eigrp point2point chain
