@@ -2224,6 +2224,14 @@ qc pass: bgp routemap filtering with nexthop
 qc pass: bgp routepolicy filtering with nexthop
 qc pass: bgp routemap filtering with nexthop with soft-reconfig
 qc pass: bgp routepolicy filtering with nexthop with soft-reconfig
+qc pass: bgp routemap filtering with asend
+qc pass: bgp routemap filtering with asend with soft-reconfig
+qc pass: bgp routepolicy filtering with asend
+qc pass: bgp routepolicy filtering with asend with soft-reconfig
+qc pass: bgp routemap filtering with asmid
+qc pass: bgp routemap filtering with asmid with soft-reconfig
+qc pass: bgp routepolicy filtering with asmid
+qc pass: bgp routepolicy filtering with asmid with soft-reconfig
 qc pass: eigrp point2point connection
 qc pass: eigrp point2multipoint connection
 qc pass: eigrp point2point chain
