@@ -11,7 +11,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v22.2.7-cur, done by cs@nop.<br/>
-tested: 2022-02-07 02:12:47, took 00:07:00, with 100 workers, on 2656 cases, 0 failed, 0 traces, 6 retries<br/>
+tested: 2022-02-07 02:36:58, took 00:07:18, with 100 workers, on 2664 cases, 0 failed, 0 traces, 3 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -2241,6 +2241,14 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-bgp532.tst">rout-bgp532.tst</a></td><td>success</td><td>bgp routepolicy filtering with nexthop</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-bgp533.tst">rout-bgp533.tst</a></td><td>success</td><td>bgp routemap filtering with nexthop with soft-reconfig</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-bgp534.tst">rout-bgp534.tst</a></td><td>success</td><td>bgp routepolicy filtering with nexthop with soft-reconfig</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-bgp535.tst">rout-bgp535.tst</a></td><td>success</td><td>bgp routemap filtering with asend</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-bgp536.tst">rout-bgp536.tst</a></td><td>success</td><td>bgp routemap filtering with asend with soft-reconfig</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-bgp537.tst">rout-bgp537.tst</a></td><td>success</td><td>bgp routepolicy filtering with asend</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-bgp538.tst">rout-bgp538.tst</a></td><td>success</td><td>bgp routepolicy filtering with asend with soft-reconfig</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-bgp539.tst">rout-bgp539.tst</a></td><td>success</td><td>bgp routemap filtering with asmid</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-bgp540.tst">rout-bgp540.tst</a></td><td>success</td><td>bgp routemap filtering with asmid with soft-reconfig</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-bgp541.tst">rout-bgp541.tst</a></td><td>success</td><td>bgp routepolicy filtering with asmid</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-bgp542.tst">rout-bgp542.tst</a></td><td>success</td><td>bgp routepolicy filtering with asmid with soft-reconfig</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-eigrp01.tst">rout-eigrp01.tst</a></td><td>success</td><td>eigrp point2point connection</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-eigrp02.tst">rout-eigrp02.tst</a></td><td>success</td><td>eigrp point2multipoint connection</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-eigrp03.tst">rout-eigrp03.tst</a></td><td>success</td><td>eigrp point2point chain</td></tr>
